--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<script src="http://www.google.com/jsapi" type="text/javascript"></script>
+	<script type="text/javascript" src="scripts.js"></script>
+
 	<title>Listo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="styles/base/reset.css">
@@ -29,11 +32,28 @@
 			<h3>New To Dos</h3>
 		</div>
 
-		<!--Add progress-box from the reademe-->
+		div class="progress-box">
+		<h3>In Progress</h3>
+		<ul class="list-group" id="currentList"></ul>
+		</div>
+		<div>
+		</div>
+
+		<div class="progress-box">
+		<h3>Complete</h3>
+		<ul class="list-group" id="archivedList"></ul>
+		</div>
 	</section>
 
 	<!-- FORM -->
-	<!--Add new task form here -->
+	<section id="newTaskForm">
+		<h3 class="todo-form-title">New To Do </h3>
+		<div  class="form-input-container">
+			<img id="cancel" src="./img/icons/cross.png" alt="close form icon">
+			<input id="newItemInput" class="todo-title-input form-input" type="text" placeholder="To-Do Title">
+			<button  id="saveNewItem" class="complete-todo-button">Add To Do</button>
+		</div>
+	</section>
 
 	<!-- FOOTER -->
 	<footer class="todo-footer">
@@ -43,7 +63,9 @@
 
 	<!--jQuery-->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<!--INclude your script file here -->
+	<script
+	src="./app/scripts/scripts.js">
+	</script>
 </main>
 </body>
 </html>
